--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,26 +1,41 @@
-name: Snake Game
+name: Generate Animation
 
 on:
+  # Run automatically every 24 hours
   schedule:
-    # Run at midnight every day
-    - cron: "0 0 * * *"
+    - cron: "0 0 * * *" 
+  
+  # Allows manually running the job at any time
   workflow_dispatch:
+  
+  # Run on every push on the master branch
+  push:
+    branches:
+      - main
 
 jobs:
-  build:
+  generate:
+    permissions: 
+      contents: write
     runs-on: ubuntu-latest
+    timeout-minutes: 5
+    
     steps:
-      - name: Generate snake game from GitHub contribution grid
-        uses: Platane/snk@v3
+      # Generates a snake game from a GitHub user's contribution graph, outputs an SVG animation
+      - name: Generate github-contribution-grid-snake.svg
+        uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
-            dist/github-snake.svg
-            dist/github-snake-dark.svg?palette=github-dark
-            dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v2
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+          
+      # Pushes the content of <build_dir> to the output branch
+      # The content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file>
+      - name: Push github-contribution-grid-snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
-          name: snake-game
-          path: dist/
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
