--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,8 +27,8 @@ jobs:
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
-            dist/github-contribution-grid-snake.svg?color_snake=black
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=black
+            dist/github-contribution-grid-snake.svg?color_snake=orange
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=orange
           
       # Pushes the content of <build_dir> to the output branch
       # The content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file>
