--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -8,7 +8,7 @@ on:
   # Allows manually running the job at any time
   workflow_dispatch:
   
-  # Run on every push on the master branch
+  # Run on every push on the main branch
   push:
     branches:
       - main
@@ -21,6 +21,16 @@ jobs:
     timeout-minutes: 5
     
     steps:
+      # Install dependencies for the snake game generation
+      - name: Set up Node.js environment
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'  # specify a compatible version of Node.js
+
+      - name: Install canvas dependency
+        run: |
+          npm install canvas
+
       # Generates a snake game from a GitHub user's contribution graph, outputs an SVG animation
       - name: Generate github-contribution-grid-snake.svg
         uses: Platane/snk/svg-only@v3
