--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,27 +21,16 @@ jobs:
     timeout-minutes: 5
     
     steps:
-      # Set up Node.js environment
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16'
-
-      # Install canvas dependency globally
-      - name: Install canvas dependency
-        run: |
-          npm install -g canvas
-
-      # Run Platane/snk action to generate the snake SVG/GIF
+      # Generates a snake game from a GitHub user's contribution graph, outputs an SVG animation
       - name: Generate github-contribution-grid-snake.svg
-        uses: Platane/snk@v3.2.0
+        uses: Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
-            dist/github-snake-dark.svg?palette=github-dark
-            dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
-
-      # Push the generated SVG to the output branch
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark&color_snake=orange
+          
+      # Pushes the content of <build_dir> to the output branch
+      # The content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file>
       - name: Push github-contribution-grid-snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
